fix: tag wrap
tag 출력 문제 고침

--- a/src/main/resources/static/css/board.css
+++ b/src/main/resources/static/css/board.css
@@ -152,6 +152,7 @@ button:hover, .content-edit-button:hover {
 }
 .content-tags-container{
     display: flex;
+    flex-wrap: wrap;
     gap:10px;
 }
 .content-detail-tag{
